# AuthenDesk

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.en.md  README.md  qml.qrc
.github/workflows/: release.yml
assets/: authendesk.desktop
qml/: AddTokenPage.qml  EditTokenPage.qml  ImportPage.qml  ScreenCapture.qml  Strings.qml  TokenDelegate.qml  TokenListPage.qml  main.qml
src/: importparser.cpp  importparser.h  localemanager.cpp  localemanager.h  main.cpp  nativefiledialog.cpp  nativefiledialog.h  qrdecoder.cpp  qrdecoder.h  result.h  serviceiconprovider.cpp  serviceiconprovider.h  tokendata.cpp  tokendata.h  tokenmanager.cpp  tokenmanager.h  totp.cpp  totp.h  version.h
src/models/: tokenlistmodel.cpp  tokenlistmodel.h
